Add hotkey information to preferences window

--- a/pyazo/pyazo/Preferences/PreferencesWindow.xib
+++ b/pyazo/pyazo/Preferences/PreferencesWindow.xib
@@ -93,6 +93,15 @@
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7ey-tI-xkj">
+                        <rect key="frame" x="27" y="15" width="427" height="17"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <textFieldCell key="cell" lineBreakMode="clipping" title="Use Global Hotkey CMD + Shift + R to take a screenshot and upload it" id="G7u-Mj-aVC">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
                 </subviews>
             </view>
             <connections>
